novo regex para permitir caracteres especiais no início e texto de informações para criar senha

--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -126,8 +126,8 @@
     "textDontBeAfraidToBeCreative":"Agora escolha um nome para todos verem, seja criativo!",
     "textHowDoYouPreferWeReferToYou":"Como prefere que as pessoas se refiram a você?",
     "textWeCareAboutYourSafety":"Sua segurança é muito importante para nós.",
-    "textAtLeast8Characteres":"- Sua senha deve ter mais de 8 caracteres",
-    "textLettersAndNumbers":"- letras e números",
+    "textAtLeast8Characteres":"Sua senha deve conter 8 caracteres ou mais,",
+    "textLettersNumbersAndCaracteres":" letras, números e símbolos",
     "textIReadAndAcceptThe":"Eu li e aceito os ",
     "textTermsAndConditions":"termos e condições",
     "textWelcome": "Olá!,",
@@ -136,7 +136,7 @@
     "textTellUsTheEmailAssociatedWithYourAccount":"Nos diga seu e-mail, ele será associado a sua conta",
     "textYourRepresentationHereInside":"Uma representação sua aqui dentro!",
     "textTypeTheNameOfAPlaceToSearch":"Digite o nome de um local para buscar.",
-    "textPasswordSpecifications":"Sua segurança é muito importante para nós.\n - Sua senha deve ter mais de 8 caracteres\n - letras e números",
+    "textPasswordSpecifications":"Sua senha deve conter 8 caracteres ou mais,\n incluindo letras, números e símbolos.ß",
     "textSelectAPicture":"Selecione uma foto antes de salvar.",
     "textRegisterSuccess":"Cadastro realizado com sucesso!",
     "textRegisterSuccessMessage":"Você será redirecionado para a página de login.",
