--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -199,7 +199,7 @@
     "textAddLocationTypePublicLocation": "Local público",
     "textAddLocationTypeNightClub": "Casa noturna",
     "textAddLocationExample": "Ex: Bar santa maria",
-    "textAddLocationCepExample": "Ex: 04553434",
+    "textAddLocationCepExample": "Ex: 04.553-434",
     "textAddLocationAddress": "Ex: Rua Clodomiro",
 
     "textOpenPermissions": "Abrir Permissões",
@@ -220,6 +220,7 @@
     "textCriticalErrorPageTitle": "Ocorreu um erro inesperado!",
     "textCriticalErrorPageBody": "Encontramos uma situação inesperada na aplicação. Estamos trabalhando o mais rápido possivel para corrigi-la!",
     "textCriticalErrorPageGoToReport": "Reportar erro",
+    "textErrorZipCode": "CEP inválido",
 
     "textWantDeactivateAccount": "Deseja desativar sua conta?",
     "textDeactivateAccountWarnning": "Você pode restaurar sua conta em até 30 dias após a desativação se ela foi desativada por engano ou incorretamente.",
