regex não obriga mais letra maiúscula

--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -136,7 +136,7 @@
     "textTellUsTheEmailAssociatedWithYourAccount":"Nos diga seu e-mail, ele será associado a sua conta",
     "textYourRepresentationHereInside":"Uma representação sua aqui dentro!",
     "textTypeTheNameOfAPlaceToSearch":"Digite o nome de um local para buscar.",
-    "textPasswordSpecifications":"Sua senha deve conter 8 caracteres ou mais,\n incluindo letras, números e símbolos.ß",
+    "textPasswordSpecifications":"Sua senha deve conter 8 caracteres ou mais,\n incluindo letras, números e símbolos.",
     "textSelectAPicture":"Selecione uma foto antes de salvar.",
     "textRegisterSuccess":"Cadastro realizado com sucesso!",
     "textRegisterSuccessMessage":"Você será redirecionado para a página de login.",
