Update: Adicionando tradução da novo chave

--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -98,6 +98,7 @@
     "textShare":"Compartilhar",
     "textPersonalInformation":"Informações Pessoais",
     "textEditProfile":"Editar Perfil",
+    "textEditAccount":"Editar Conta",
     "textLogout":"Sair",
     "textDisableAccount":"Desativar Conta",
     "textDeleteAccount":"Excluir Conta",
