Fix: Corrigindo mensagem fora no intl

--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -125,6 +125,7 @@
     "textAddLocation":"Adicionar Local",
     "textOptions":"Opções",
     "textSuccessSaveLocation":"Local enviado para revisão com sucesso!",
+    "textExploreOtherLocations":"Explorar outros locais",
     
 
     "textFeatureAvailableSoon":"Funcionalidade disponível em breve",
