Fix[437] Adicionado novo regex para criação de nome e nova mensagem de alerta

--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -23,7 +23,7 @@
     "textErrorLoginPassword":"Por favor, digite uma senha válida",
     "textErrorWrongFields":"Campos errados! Tente novamente.",
     "textErrorInvalidDate":"Por favor, digite uma data válida",
-    "textErrorEmptyField":"Esse campo não pode ficar vazio",
+    "textErrorEmptyField":"Espaços vazios não são válidos",
     "textErrorUserName":"O nome do usuário precisa conter 4 caracteres ou mais",
     "textErrorEmail":"Por favor, digite um e-mail válido",
     "textErrorPronouns":"ex: Ela/Dela, Ele/Dele, Ela/Elu",
