--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,5 +1,5 @@
-**Release Notes**
+Release Notes
 
-**Enhancements:**
+Enhancements:
 - Configurado Firebase Distribution App
 - Configurado registro de Release Notes para distribuição do app em loja
